--- a/autocomplete/demo/autocomplete.html
+++ b/autocomplete/demo/autocomplete.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./autocomplete.css">
+<link rel="stylesheet" href="https://github.com/omni-trash/javascript/blob/main/autocomplete/dist/latest/autocomplete.css">
 <style>
 * {
 	box-sizing: border-box;
@@ -762,8 +762,8 @@ with value
 
 </form>
 
-<script src="./jquery-3.6.0.js"></script>
-<script src="./autocomplete.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://github.com/omni-trash/javascript/blob/main/autocomplete/dist/latest/autocomplete.js"></script>
 <script>
 $('input').autocomplete();
 </script>
