--- a/autocomplete/demo/autocomplete.html
+++ b/autocomplete/demo/autocomplete.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://github.com/omni-trash/javascript/blob/main/autocomplete/dist/latest/autocomplete.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/omni-trash/javascript/autocomplete/dist/1.21.4.20/autocomplete.css">
 <style>
 * {
 	box-sizing: border-box;
@@ -763,7 +763,7 @@ with value
 </form>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://github.com/omni-trash/javascript/blob/main/autocomplete/dist/latest/autocomplete.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/omni-trash/javascript/autocomplete/dist/1.21.4.20/autocomplete.js"></script>
 <script>
 $('input').autocomplete();
 </script>
