--- a/autocomplete/demo/autocomplete.html
+++ b/autocomplete/demo/autocomplete.html
@@ -779,7 +779,7 @@ with HTML
 		<option value="0001" label="Afghanistan">
 			<div>
 				<div><b>0001</b></div>
-				<div><i>Afghanistan</i></div>
+				<div>Afghanistan</div>
 				<div><small><i>Kabul</i></small></div>
 			</div>
 		</option>
