--- a/autocomplete/demo/autocomplete.html
+++ b/autocomplete/demo/autocomplete.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/omni-trash/javascript/autocomplete/dist/1.22.8.22/autocomplete.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/omni-trash/javascript/autocomplete/dist/1.22.8.20/autocomplete.css">
 <style>
 * {
 	box-sizing: border-box;
@@ -93,7 +93,7 @@ with HTML
 <option value="0001" label="Afghanistan">
 	<div>
 		<div><b>0001</b></div>
-		<div><i>Afghanistan</i></div>
+		<div>Afghanistan</div>
 		<div><small><i>Kabul</i></small></div>
 	</div>
 </option>
