--- a/autocomplete/demo/apidemoCDNJS.html
+++ b/autocomplete/demo/apidemoCDNJS.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./autocomplete.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/omni-trash/javascript/autocomplete/dist/1.22.8.20/autocomplete.css">
 <style>
 * {
 	box-sizing: border-box;
@@ -88,8 +88,8 @@ span#info > a {
 	</label>
 </form>
 
-<script src="./jquery-3.6.0.js"></script>
-<script src="./autocomplete.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/omni-trash/javascript/autocomplete/dist/1.22.8.20/autocomplete.js"></script>
 <script>
 
 var optionsCDNJS = {
